Add README documentation for ESGF2-US project and renames Debugging to node-troubleshooting. Add navbar links to Metagrid and ESGF.
- Create index.md with project overview, data access, publishing, and developer resources. Replacing README.md
- Add a placeholder troubleshooting guide in node-troubleshooting.md for future expansion.
- Add 4th card to index page and altered cards to guide the 4 main user categories shown on the sidebar
- Other edits and alterations to multiple files

--- a/_toc.yml
+++ b/_toc.yml
@@ -16,7 +16,41 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: README
+root: index
 
+sections:
+  - file: project-overview.md
 
+  - title: Data Users
+    children:
+      - file: data-users.md
+      - file: metagrid-guide.md
+      - file: Intake-ESGF.md
+      - file: Cookbooks.md
+      - file: ESG-Pull.md
 
+  - title: Data Publishers
+    children:
+      - file: ESG-Publisher.md
+      - file: ESG-Voc.md
+      - file: CMIP-Cheatsheet.md
+
+  - title: ESGF Node Operators
+    children:
+      - file: Node-Installation.md
+      - file: ESGF-Installer.md
+      - file: kubernetes.md
+      - file: replicator.md
+      - file: ESGF-Docker.md
+      - file: ESGF-Compute.md
+      - file: node-troubleshooting.md
+
+  - title: ESGF Developers
+    children:
+      - file: Developer-Guide.md
+      - file: Metagrid-Developer-Guide.md
+      - file: Intake-ESGF.md
+      - file: backend.md
+      - file: esgf-utils.md
+
+  - file: CONTRIBUTING.md
